wysiwyg: decrease z-index to a level below helpbar and dialogs, fixes #4597
git-svn-id: svn://develop.studip.de/studip/trunk@31393 c5b85792-5220-0410-ad23-ed5b6b8ad999

--- a/public/assets/stylesheets/wysiwyg.css
+++ b/public/assets/stylesheets/wysiwyg.css
@@ -21,7 +21,7 @@
     padding: 0;
     margin: 0;
     margin-bottom: 5px;
-    z-index: 10000;
+    z-index: 999;
     opacity: 0.95;
     -webkit-box-shadow: 0 1px 2px -1px #7788AA;
     -moz-box-shadow: 0 1px 2px -1px #7788AA;
@@ -44,7 +44,7 @@
 
     border: 2px dashed lightgrey;
     background-color: white;
-    z-index:9999;
+    z-index: 998;
     opacity: 0.7;
 
     text-align: center;
